# gppy

./: LICENSE  README.md  setup.cfg
gpp/: gtf.py
gppy/: gtf.py
scripts/: gtf_flybase.py
test/: .gitignore  human.chrY.cds.bed12  human.chrY.cds.giv.tsv  human.chrY.cds.giv2.bed12  human.chrY.cds.start.gpos.tsv  human.chrY.cds.start.gpos2.tsv  human.chrY.cds.start.tpos.tsv  human.chrY.cds.start.tpos2.tsv  human.chrY.cds.tiv.tsv  human.chrY.cds.tiv2.tsv  human.chrY.gtf  human.chrY.txinfo.tsv  test.ipynb
