[metadata]
name = gpp
version = 0.1.0
author = Hong Zhang (mt1022)
author_email = gxelab@163.com
description = Genomic Position with Python (GPP)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mt1022/gpp
project_urls =
    Bug Tracker = https://github.com/mt1022/gpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.9
install.requires =


[options.entry_points]
console_scripts =
    gpp = gpp.gtf:main
