[metadata]
name = gppy
version = 0.1.4
author = Hong Zhang (mt1022)
author_email = gxelab@163.com
description = Genomic Position with Python (GPPY)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mt1022/gppy
project_urls =
    Bug Tracker = https://github.com/mt1022/gppy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.9
install_requires =


[options.entry_points]
console_scripts =
    gppy = gppy.gtf:main
